# hal

./: CMakeLists.txt  project_CMakeLists.txt_example
include/: hal_all.h  hal_base.h  hal_filesystem.h  hal_netsys.h  hal_poll.h  hal_serial.h  hal_socket_dgram.h  hal_socket_stream.h  hal_thread.h  hal_time.h  hal_timer.h  hal_utils.h
src/: hal_base_empty.c  hal_base_linux.c  hal_base_win.c  hal_common.c  hal_filesystem_empty.c  hal_filesystem_linux.c  hal_filesystem_win.c  hal_netsys_linux.c  hal_netsys_win.c  hal_poll_empty.c  hal_poll_linux.c  hal_poll_win.c  hal_serial_empty.c  hal_serial_linux.c  hal_serial_win.c  hal_socket_dgram_empty.c  hal_socket_dgram_linux.c  hal_socket_dgram_win.c  hal_socket_ethgram_win.c  hal_socket_stream_empty.c  hal_socket_stream_linux.c  hal_socket_stream_win.c  hal_syshelper.h  hal_syshelper_win.c  hal_thread_empty.c  hal_thread_linux.c  hal_thread_win.c  hal_time_empty.c  hal_time_linux.c  hal_time_win.c  hal_timer_linux.c  hal_timer_win.c  hal_utils_linux.c  hal_utils_win.c
tests/: test_base.c  test_dgram.c  test_fs.c  test_halpoll.c  test_poll.c  test_serial.c  test_stream.c  test_thread.c  test_time.c  test_timer.c  test_utils.c  tests.cmake
